# lorentz-contract-param

./: .crossref-verifier.yaml  .dockerignore  .gitignore  .gitlab-ci.yml  .hlint-universum.yaml  .weeder.yaml  CHANGES.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  morley.cabal  package.yaml  stack.yaml  test.bats  test.tz
.gitlab/merge_request_templates/: default.md
app/: LorentzContractsOptions.hs  Main.hs
contract-discover/: Main.hs
contracts/: GenericMultisig.tz  ManagedLedgerAthens.tz  MultisigManagedLedgerAthens.tz  access.mtz  add1_with_cyrillic_comments.tz  auction_buggy.tz  barOr.mtz  basic1.tz  basic2.tz  basic4.tz  basic5.tz  big_map_in_storage.tz  bytes_literal.tz  call_self_several_times.tz  case.mtz  complex_strings.tz  construct.mtz  containers.mtz  contract_op.tz  correct_big_map_storage_type.tz  dip-sometimes-fail.tz  empties.tz  environment.tz  fail_or_store_and_transfer.tz  failing-let.mtz  failing_let.mtz  failwith_message.tz  failwith_message2.tz  gas_exhaustion.tz  implicit_parameter_type.mtz  implicit_storage_type.mtz  increment.tz  let_type.mtz  letblock.mtz  lsl.tz  lsr.tz  mutez_add_overflow.tz  mutez_sub_underflow.tz  nopInstr.mtz  nop_instr.mtz  (+18 more)
contracts/A1/: caller-add.mtz  caller-append.mtz  caller_add.mtz  counter.mtz  feather.mtz
contracts/FA1/: FA1.mtz
contracts/ill-typed/: annotation-mismatch.tz  annotation_mismatch_iter.tz  basic3.tz  concat2-lists.tz  concat_lists.tz  dip_always_fail.tz  extInstr2.mtz  ext_instr.mtz  fail-before-nop.tz  incorrect_big_map_parameter_type.tz  incorrect_big_map_storage_type.tz  incorrect_big_map_storage_type2.tz  incorrect_big_map_storage_type3.tz  invalid_print.mtz.tz  lambda_self1.tz  lambda_self2.tz  lambda_self3.tz  let-mismatch.mtz  letblock_trivial.mtz  macro_in_let_fail.mtz  map-unordered.tz  map_nonstrictly_ordered.tz  operation-in-parameter.tz  operation_in_created_contract.tz  operation_in_push.tz  operation_in_storage.tz  operation_packed.tz  pack_big_map.tz  push_big_map.tz  push_contract.tz  set-nonstrictly-ordered.tz  set-unordered.tz  sum_strings.tz  testassert_invalid_print.mtz  testassert_invalid_stack1.mtz  testassert_invalid_stack1.tz  testassert_invalid_stack2.mtz  testassert_invalid_stack2.tz  testassert_invalid_stack3.mtz  unpack_big_map.tz  (+1 more)
contracts/pretty/: contract-with-create-contract.tz.pretty  contract-with-lambda.tz  contract-with-lambda.tz.pretty
contracts/tezos_examples/: LICENSE  compare.tz
contracts/unparsable/: non_ascii_error.mtz
docs/: branching.md  code-style.md  michelsonExploration.md  michelsonTypes.md  morleyInstructions.md  morleyInterpreter.md  morleyLanguage.md  morleyLet.md  morleyMacros.md  morleyProposal.md  morleyRuntime.md  morleySyntaxSugar.md  morleyTypechecker.md  release.md  testingEDSL.md  upgradeableContracts.md
docs/TZIP/: README.md
docs/TZIP/A/: FA1.4.md  FA1.md  FA1_faq.md
examples/EDSL/: CompareSpec.hs  EnvironmentSpec.hs  HelloTezosSpec.hs  README.md  StringCallerSpec.hs  edsl-demo.cabal  snapshot.yaml  stack.yaml
examples/EDSL/contracts/: compare.tz  environment.tz  helloTezos.tz  stringCaller.tz
hpack/: definitions.yaml
indigo/: Makefile  README.md  package.yaml
indigo/hpack/: definitions.yaml  module.yaml
indigo/src/: Indigo.hs
indigo/src/Indigo/: Examples.hs  Expr.hs  Language.hs  State.hs
lorentz-contracts/: Makefile  OriginatingMultisigAthens.md  OriginatingMultisigNat.md  README.md  package.yaml
lorentz-contracts/app/: LorentzContracts.hs  LorentzContractsOptions.hs  Main.hs
lorentz-contracts/contracts/: ExplicitBigMapManagedLedgerAthens.tz  NatStorageContract.tz  NatStorageWithBigMapContract.tz  WrappedMultisigContractNat.tz  generic.tz
lorentz-contracts/hpack/: definitions.yaml
lorentz-contracts/param-app/: Main.hs
lorentz-contracts/src/Lorentz/: Contracts.hs
lorentz-contracts/storage-app/: Main.hs
make/: Makefile  Makefile.definitions
param-app/: Main.hs  Multisig.hs
prelude/: CHANGES.md  Prelude.hs  Unsafe.hs  morley-prelude.cabal  package.yaml
scripts/: lint.sh  morley.sh  test-printer.sh
src/: Lorentz.hs  Main.hs  Prelude.hs
src/Advanced/: Arith.hs  CValue.hs  Interpreter.hs  Parser.hs  Type.hs  TypeCheck.hs  Value.hs
src/Advanced/Type/: Annotation.hs  Extract.hs  Sing.hs  T.hs
src/Advanced/TypeCheck/: Helpers.hs  TypeCheck.hs  Types.hs
src/Advanced/Value/: Arith.hs  CValue.hs  Value.hs
src/Language/Michelson/: Macro.hs  Parser.hs  Printer.hs  (+3 more)
src/Lorentz/: ADT.hs  Arith.hs  Base.hs  Coercions.hs  Constraints.hs  Discover.hs  Doc.hs  EntryPoints.hs  Errors.hs  Ext.hs  Extensible.hs  Instr.hs  Macro.hs  Polymorphic.hs  Prelude.hs  Rebinded.hs  Referenced.hs  Store.hs  Test.hs  Type.hs  UParam.hs  UStore.hs  Value.hs
src/Michelson/: Analyzer.hs  EqParam.hs  ErrorPos.hs  Interpret.hs  Let.hs  Lexer.hs  Macro.hs  Optimizer.hs  Parser.hs  Printer.hs  Runtime.hs  Test.hs  Text.hs  TypeCheck.hs  Typecheck.hs  Typed.hs  Types.hs  Untyped.hs
src/Morley/: Aliases.hs  Default.hs  Ext.hs  Lexer.hs  Macro.hs  Nop.hs  Parser.hs  Runtime.hs  Test.hs  Types.hs
src/Tezos/: Address.hs  Core.hs  Crypto.hs
src/Util/: Alternative.hs  Default.hs  Generic.hs  IO.hs  Instances.hs  Lens.hs  Markdown.hs  Named.hs  Peano.hs  Positive.hs  Type.hs  TypeLits.hs  TypeTuple.hs  Typeable.hs
storage-app/: Main.hs
test/: Main.hs  Spec.hs  Tree.hs  Util.hs
test/Test/: Analyzer.hs  Arbitrary.hs  CValConversion.hs  Doc.hs  Ext.hs  Interpreter.hs  Macro.hs  Nop.hs  Optimizer.hs  Parser.hs  Typecheck.hs  ValConversion.hs
test/golden/: Address.json  Annotation * FieldTag.json  Annotation * TypeTag.json  Annotation * VarTag.json  Contract (Op NopInstr).json  Contract (Op UNopInstr).json  Contract Op.json  Elt (Op NopInstr).json  Elt (Op UNopInstr).json  Elt Op.json  InstrAbstract NopInstr (Op NopInstr).json  InstrAbstract Op.json  InstrAbstract UNopInstr (Op UNopInstr).faulty.json  InstrAbstract UNopInstr (Op UNopInstr).json  Mutez.json  Op NopInstr.json  Op UNopInstr.faulty.json  Op UNopInstr.json  Op.json  Timestamp.json  Value (Op NopInstr).json  Value (Op UNopInstr).json  Value Op.json
(+185 files in other folders)
