name:                morley
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/johnchandlerburnham/morley#readme
license:             AGPL-3
license-file:        LICENSE
author:              John C. Burnham
maintainer:          john@camlcase.io
copyright:           2018 CamlCase Technologies
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  build-tool-depends: autoexporter:autoexporter

  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Michelson.Advanced
                     , Michelson.Interpret
                     , Michelson.Types
                     , Michelson.Typecheck
                     , Morley.Default
                     , Morley.Lexer
                     , Morley.Macro
                     , Morley.Parser
                     , Morley.Parser.Annotations
                     , Morley.Runtime
                     , Morley.Runtime.GState
                     , Morley.Runtime.TxData
                     , Morley.Types
                     , Prelude
                     , Tezos.Crypto
  other-modules:       Michelson.Advanced.Interpreter
                     , Michelson.Advanced.Type
                     , Michelson.Advanced.Type.Annotation
                     , Michelson.Advanced.Type.Extract
                     , Michelson.Advanced.Type.Sing
                     , Michelson.Advanced.Type.T
                     , Michelson.Advanced.TypeCheck
                     , Michelson.Advanced.TypeCheck.Instr
                     , Michelson.Advanced.TypeCheck.Helpers
                     , Michelson.Advanced.TypeCheck.Types
                     , Michelson.Advanced.TypeCheck.Value
                     , Michelson.Advanced.Value
                     , Michelson.Advanced.Value.Arith
                     , Michelson.Advanced.Value.CValue
                     , Michelson.Advanced.Value.Helpers
                     , Michelson.Advanced.Value.Instr
                     , Michelson.Advanced.Value.Value

  build-depends:       aeson
                     , aeson-options
                     , base-noprelude >= 4.7 && < 5
                     , base16-bytestring
                     , base58-bytestring
                     , bytestring
                     , containers
                     , cryptonite
                     , data-default
                     , fmt
                     , formatting
                     , lens
                     , megaparsec >= 7.0.0
                     , memory
                     , natural-numbers
                     , QuickCheck
                     , text
                     , time
                     , timerep
                     , parser-combinators >= 1.0.0
                     , directory
                     , singletons
                     , syb
                     , mtl
                     , universum
                     , vinyl
  ghc-options:        -Weverything
                      -Wno-missing-exported-signatures
                      -Wno-missing-import-lists
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-unsafe
                      -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-implicit-prelude
  default-extensions:
                       ApplicativeDo
                       AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedLabels
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

executable morley
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base-noprelude >= 4.7 && < 5
                     , universum
                     , fmt
                     , pretty-simple
                     , megaparsec >= 7.0.0
                     , optparse-applicative
                     , text
                     , morley
  ghc-options:        -Weverything
                      -Wno-missing-exported-signatures
                      -Wno-missing-import-lists
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-unsafe
                      -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-implicit-prelude
  default-extensions:
                       ApplicativeDo
                       AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedLabels
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

test-suite morley-test
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  other-modules:       Test.Interpreter
                     , Test.Macro
                     , Test.Morley.Runtime
                     , Test.Parser
                     , Test.Tezos.Crypto
                     , Test.Typecheck
                     , Test.Util.Contracts
                     , Test.Util.QuickCheck
  build-depends:
                       aeson
                     , base-noprelude >= 4.7 && < 5
                     , directory
                     , filepath
                     , fmt
                     , formatting
                     , hspec
                     , HUnit
                     , lens
                     , megaparsec >= 7.0.0
                     , morley
                     , QuickCheck
                     , text
                     , universum
                     , vinyl
  ghc-options:        -Weverything
                      -Wno-missing-exported-signatures
                      -Wno-missing-import-lists
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-unsafe
                      -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-implicit-prelude
  default-extensions:
                       ApplicativeDo
                       AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedLabels
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns
