name:                morley
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/johnchandlerburnham/morley#readme
license:             AGPL-3
license-file:        LICENSE
author:              John C. Burnham
maintainer:          john@camlcase.io
copyright:           2018 CamlCase Technologies
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  build-tool-depends: autoexporter:autoexporter

  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Michelson.Interpret
                     , Michelson.TypeCheck
                     , Michelson.Typed
                     , Michelson.Typed.Value
                     , Michelson.Untyped
                     , Morley.Default
                     , Morley.Lexer
                     , Morley.Macro
                     , Morley.Nop
                     , Morley.Parser
                     , Morley.Parser.Annotations
                     , Morley.Runtime
                     , Morley.Runtime.GState
                     , Morley.Runtime.TxData
                     , Morley.Test
                     , Morley.Types
                     , Prelude
                     , Tezos.Address
                     , Tezos.Core
                     , Tezos.Crypto
  other-modules:       Michelson.TypeCheck.Helpers
                     , Michelson.TypeCheck.Instr
                     , Michelson.TypeCheck.Types
                     , Michelson.TypeCheck.Value
                     , Michelson.Typed.Annotation
                     , Michelson.Typed.Arith
                     , Michelson.Typed.Convert
                     , Michelson.Typed.CValue
                     , Michelson.Typed.Extract
                     , Michelson.Typed.Instr
                     , Michelson.Typed.Polymorphic
                     , Michelson.Typed.Sing
                     , Michelson.Typed.T
                     , Michelson.Untyped.Annotation
                     , Michelson.Untyped.Contract
                     , Michelson.Untyped.Instr
                     , Michelson.Untyped.Type
                     , Michelson.Untyped.Value

  build-depends:       aeson
                     , aeson-options
                     , base-noprelude >= 4.7 && < 5
                     , base16-bytestring
                     , base58-bytestring
                     , bytestring
                     , containers
                     , cryptonite
                     , data-default
                     , fmt
                     , formatting
                     , hspec
                     , lens
                     , megaparsec >= 7.0.0
                     , memory
                     , natural-numbers
                     , QuickCheck
                     , text
                     , time
                     , timerep
                     , parser-combinators >= 1.0.0
                     , directory
                     , singletons
                     , syb
                     , mtl
                     , universum
                     , vinyl
  ghc-options:        -Weverything
                      -Wno-missing-exported-signatures
                      -Wno-missing-import-lists
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-unsafe
                      -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-implicit-prelude
  default-extensions:
                       ApplicativeDo
                       AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedLabels
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

executable morley
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base-noprelude >= 4.7 && < 5
                     , universum
                     , fmt
                     , pretty-simple
                     , megaparsec >= 7.0.0
                     , optparse-applicative
                     , text
                     , morley
  ghc-options:        -Weverything
                      -Wno-missing-exported-signatures
                      -Wno-missing-import-lists
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-unsafe
                      -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-implicit-prelude
  default-extensions:
                       ApplicativeDo
                       AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedLabels
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

test-suite morley-test
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  other-modules:       Test.Arbitrary
                     , Test.CValConversion
                     , Test.Interpreter
                     , Test.Interpreter.Auction
                     , Test.Interpreter.Compare
                     , Test.Interpreter.Conditionals
                     , Test.Macro
                     , Test.Nop
                     , Test.Morley.Runtime
                     , Test.Parser
                     , Test.Serialization.Aeson
                     , Test.Tezos.Address
                     , Test.Tezos.Crypto
                     , Test.Typecheck
                     , Test.Util.Contracts
                     , Test.Util.Interpreter
                     , Test.Util.QuickCheck
                     , Test.ValConversion
  build-depends:
                       aeson
                     , base-noprelude >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , fmt
                     , formatting
                     , hspec
                     , hspec-golden-aeson
                     , HUnit
                     , lens
                     , megaparsec >= 7.0.0
                     , morley
                     , QuickCheck
                     , quickcheck-arbitrary-adt
                     , text
                     , time
                     , universum
                     , vinyl
  ghc-options:        -Weverything
                      -Wno-missing-exported-signatures
                      -Wno-missing-import-lists
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-unsafe
                      -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-implicit-prelude
  default-extensions:
                       ApplicativeDo
                       AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedLabels
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns
