cabal-version:       2.4
name:                morley
version:             0.2.0.1
synopsis:            Developer tools for the Michelson Language
description:
  A library to make writing smart contracts in Michelson — the smart contract
  language of the Tezos blockchain — pleasant and effective.
homepage:            https://gitlab.com/morley-framework/morley
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              camlCase, Serokell, Tocqueville Group
maintainer:          john.c.burnham@gmail.com
copyright:           2018 camlCase, 2019 Tocqueville Group
category:            Language
build-type:          Simple
bug-reports:         https://issues.serokell.io/issues/TM
extra-doc-files:     CHANGES.md
                   , CONTRIBUTING.md
                   , README.md

source-repository head
  type:     git
  location: git@gitlab.com:morley-framework/morley.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
                       Lorentz
                     , Michelson.Interpret
                     , Michelson.Interpret.Pack
                     , Michelson.Interpret.Unpack
                     , Michelson.Let
                     , Michelson.Macro
                     , Michelson.Parser
                     , Michelson.Printer
                     , Michelson.Printer.Util
                     , Michelson.Runtime
                     , Michelson.Runtime.GState
                     , Michelson.Runtime.TxData
                     , Michelson.TypeCheck
                     , Michelson.Typed
                     , Michelson.Typed.Value
                     , Michelson.Test
                     , Michelson.Test.Dummy
                     , Michelson.Test.Gen
                     , Michelson.Test.Import
                     , Michelson.Test.Integrational
                     , Michelson.Test.Unit
                     , Michelson.Test.Util
                     , Michelson.Untyped
                     , Tezos.Address
                     , Tezos.Core
                     , Tezos.Crypto
                     , Util.Alternative
                     , Util.Default
                     , Util.Generic
                     , Util.Lens
                     , Util.Named
                     , Util.Peano
                     , Util.TypeTuple

  other-modules:       Lorentz.ADT
                     , Lorentz.Arith
                     , Lorentz.Base
                     , Lorentz.Constraints
                     , Lorentz.Ext
                     , Lorentz.Instr
                     , Lorentz.Macro
                     , Lorentz.Polymorphic
                     , Lorentz.Prelude
                     , Lorentz.Rebinded
                     , Lorentz.Value
                     , Michelson.EqParam
                     , Michelson.Parser.Annotations
                     , Michelson.Parser.Error
                     , Michelson.Parser.Ext
                     , Michelson.Parser.Helpers
                     , Michelson.Parser.Instr
                     , Michelson.Parser.Let
                     , Michelson.Parser.Lexer
                     , Michelson.Parser.Macro
                     , Michelson.Parser.Type
                     , Michelson.Parser.Types
                     , Michelson.Parser.Value
                     , Michelson.TypeCheck.Error
                     , Michelson.TypeCheck.Ext
                     , Michelson.TypeCheck.Helpers
                     , Michelson.TypeCheck.Instr
                     , Michelson.TypeCheck.TypeCheck
                     , Michelson.TypeCheck.Types
                     , Michelson.TypeCheck.Value
                     , Michelson.Typed.Aliases
                     , Michelson.Typed.Annotation
                     , Michelson.Typed.Arith
                     , Michelson.Typed.Convert
                     , Michelson.Typed.CValue
                     , Michelson.Typed.Extract
                     , Michelson.Typed.Instr
                     , Michelson.Typed.Haskell
                     , Michelson.Typed.Haskell.Instr
                     , Michelson.Typed.Haskell.Instr.Helpers
                     , Michelson.Typed.Haskell.Instr.Product
                     , Michelson.Typed.Haskell.Instr.Sum
                     , Michelson.Typed.Haskell.Value
                     , Michelson.Typed.Polymorphic
                     , Michelson.Typed.Scope
                     , Michelson.Typed.Sing
                     , Michelson.Typed.T
                     , Michelson.Untyped.Aliases
                     , Michelson.Untyped.Annotation
                     , Michelson.Untyped.Contract
                     , Michelson.Untyped.Ext
                     , Michelson.Untyped.Instr
                     , Michelson.Untyped.Type
                     , Michelson.Untyped.Value

  build-depends:       aeson
                     , aeson-options
                     , aeson-pretty
                     , base-noprelude >= 4.7 && < 5
                     , base16-bytestring
                     , base58-bytestring
                     , binary
                     , bytestring
                     , constraints
                     , containers
                     , cryptonite
                     , data-default
                     , fmt
                     , formatting
                     , ghc-prim
                     , hex-text
                     , hspec
                     , lens
                     , megaparsec >= 7.0.0
                     , memory
                     , morley-prelude
                     , mtl
                     , named
                     , parser-combinators >= 1.0.0
                     , QuickCheck
                     , singletons
                     , syb
                     , text
                     , time
                     , timerep
                     -- ↓ We don't use it, but otherwise Hackage fails
                     , transformers-compat == 0.6.2
                     , vector
                     , vinyl
                     , wl-pprint-text
  ghc-options:        -Weverything
                      -Wno-missing-exported-signatures
                      -Wno-missing-import-lists
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-unsafe
                      -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-implicit-prelude
  default-extensions:
                       ApplicativeDo
                       AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedLabels
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

executable morley
  hs-source-dirs:      app
  main-is:             Main.hs
  autogen-modules:     Paths_morley
  other-modules:       Paths_morley
  default-language:    Haskell2010
  build-depends:       base-noprelude >= 4.7 && < 5
                     , fmt
                     , morley
                     , morley-prelude
                     , named
                     , optparse-applicative
                     , pretty-simple
  ghc-options:        -Weverything
                      -Wno-missing-exported-signatures
                      -Wno-missing-import-lists
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-unsafe
                      -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-implicit-prelude
  default-extensions:
                       ApplicativeDo
                       AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedLabels
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

test-suite morley-test
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-tool-depends:  tasty-discover:tasty-discover
  other-modules:       Test.Arbitrary
                     , Test.CValConversion
                     , Test.Interpreter
                     , Test.Interpreter.Auction
                     , Test.Interpreter.CallSelf
                     , Test.Interpreter.Compare
                     , Test.Interpreter.Conditionals
                     , Test.Interpreter.ContractOp
                     , Test.Interpreter.EnvironmentSpec
                     , Test.Interpreter.A1.Feather
                     , Test.Interpreter.StringCaller
                     , Test.Interpreter.Walker
                     , Test.Lorentz.Contracts.Auction
                     , Test.Lorentz.Contracts.Walker
                     , Test.Macro
                     , Test.Ext
                     , Test.Michelson.Runtime
                     , Test.Parser
                     , Test.Printer.Michelson
                     , Test.Serialization.Aeson
                     , Test.Tezos.Address
                     , Test.Serialization.Michelson
                     , Test.Tezos.Crypto
                     , Test.Typecheck
                     , Test.Util.Contracts
                     , Test.Util.Parser
                     , Test.Util.QuickCheck
                     , Test.ValConversion

                     -- Workaround
                     , Test.Tasty.HUnit
  build-depends:
                       aeson
                     , base-noprelude >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , fmt
                     , formatting
                     , generic-arbitrary
                     , hex-text
                     , hspec
                     , hspec-expectations
                     , hspec-golden-aeson
                     , HUnit
                     , lens
                     , megaparsec >= 7.0.0
                     , morley
                     , morley-prelude
                     , mtl
                     , named
                     , QuickCheck
                     , quickcheck-arbitrary-adt
                     , quickcheck-instances
                     , singletons
                     , tasty
                     , tasty-hspec
                     , tasty-quickcheck
                     , text
  ghc-options:        -Weverything
                      -Wno-missing-exported-signatures
                      -Wno-missing-import-lists
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-unsafe
                      -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-implicit-prelude
  default-extensions:
                       ApplicativeDo
                       AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedLabels
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns
