name:                morley-prelude
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/johnchandlerburnham/morley#readme
license:             AGPL-3
license-file:        ../LICENSE
author:              John C. Burnham
maintainer:          john@camlcase.io
copyright:           2018 CamlCase Technologies
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  default-language:    Haskell2010
  exposed-modules:     Prelude
  build-depends:       base-noprelude >= 4.7 && < 5
                     , universum
  ghc-options:        -Weverything
                      -Wno-missing-exported-signatures
                      -Wno-missing-import-lists
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-unsafe
                      -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-implicit-prelude
