cabal-version:       2.4
name:                edsl-demo
version:             0.1.0
synopsis:            Demo of Morley testing EDSL
build-type:          Simple

test-suite edsl-demo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      .
  main-is:             Spec.hs
  other-modules:
                       CompareSpec
                       EnvironmentSpec
                       HelloTezosSpec
                       StringCallerSpec
  build-depends:       base
                     , fmt
                     , hspec
                     , morley
                     , QuickCheck
                     , quickcheck-instances
                     , text
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  default-language:    Haskell2010
